--- a/templates/clients.conf
+++ b/templates/clients.conf
@@ -1,7 +1,7 @@
-client antarctica-access-point-1 {
+client myren-access-point-1 {
         ipaddr         = $CLIENT_IP_ADDRESS
         netmask        = 32
         secret         = $CLIENT_SECRET
-        shortname      = southpole-11g
+        shortname      = myren-ap
         virtual_server = eduroam
 }
