--- a/templates/proxy.home_server_pool.footer.conf
+++ b/templates/proxy.home_server_pool.footer.conf
@@ -1,8 +1,4 @@
-}
-realm $LOCAL_SCHOOL_REALM {
-    nostrip
-}
-realm "~.+$" {
-    pool            = EDUROAM
-    nostrip
+realm eduroam_flr {
+        auth_pool = eduroam_flr_pool
+	nostrip
 }
