--- a/templates/clients.conf
+++ b/templates/clients.conf
@@ -1,3 +1,9 @@
+client eduroam_flr_server_$IDX {
+        ipaddr = $IP_ADDRESS
+        secret = $SECRET
+	nastype = 'eduroam_flr'
+}
+
 client myren-access-point-1 {
         ipaddr         = $CLIENT_IP_ADDRESS
         netmask        = 32
