--- a/templates/clients.conf
+++ b/templates/clients.conf
@@ -1,6 +1,6 @@
-client eduroam_flr_server_$IDX {
-        ipaddr = $IP_ADDRESS
-        secret = $SECRET
+client eduroam_flr_server_0 {
+        ipaddr = 203.80.16.18
+        secret = myr3n
 	nastype = 'eduroam_flr'
 }
 
